[gd_scene load_steps=38 format=2]

[ext_resource path="res://Sprites/Backgrounds/Black3.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Enemies/Enemy9.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Enemies/Enemy7.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Enemies/Enemy3.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Enemies/Enemy1.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Enemies/Enemy2.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Enemies/Enemy4.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Enemies/Enemy5.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Enemies/Enemy8.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Enemies/Enemy6.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/Spawner.gd" type="Script" id=12]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=13]
[ext_resource path="res://Scenes/Specials/ShootItem.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Specials/ShieldItem.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Specials/MovItem.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/Specials/HpItem.tscn" type="PackedScene" id=17]
[ext_resource path="res://Sprites/Backgrounds/Black2.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Backgrounds/Black1.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Star.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Backgrounds/Green.png" type="Texture" id=21]
[ext_resource path="res://Sprites/UI/Life.png" type="Texture" id=22]
[ext_resource path="res://Sprites/UI/FillBar.png" type="Texture" id=23]
[ext_resource path="res://Font/Early GameBoy.ttf" type="DynamicFontData" id=24]
[ext_resource path="res://Sprites/UI/GameOver.png" type="Texture" id=25]
[ext_resource path="res://Sprites/UI/Buttons/hRetry.png" type="Texture" id=26]
[ext_resource path="res://Sprites/UI/Buttons/nRetry.png" type="Texture" id=27]
[ext_resource path="res://Sprites/UI/Buttons/hMinorExit.png" type="Texture" id=28]
[ext_resource path="res://Sprites/UI/Buttons/nMinorExit.png" type="Texture" id=29]
[ext_resource path="res://Sprites/UI/Panel/PausePanel.png" type="Texture" id=30]
[ext_resource path="res://Sprites/UI/Buttons/nResume.png" type="Texture" id=31]
[ext_resource path="res://Sprites/UI/Buttons/hResume.png" type="Texture" id=32]
[ext_resource path="res://Sprites/UI/Score.png" type="Texture" id=33]
[ext_resource path="res://Audio/Stage.ogg" type="AudioStream" id=34]
[ext_resource path="res://Audio/Select.ogg" type="AudioStream" id=35]

[sub_resource type="DynamicFont" id=1]
size = 45
outline_color = Color( 0.886275, 0.886275, 0.886275, 1 )
use_filter = true
font_data = ExtResource( 24 )

[sub_resource type="Curve" id=2]
min_value = 0.1
max_value = 0.5
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.5, 0.3 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="Main" type="Node2D"]
script = ExtResource( 13 )

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="Canvas"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeSprite" type="Sprite" parent="Canvas/UI"]
position = Vector2( 87.0992, 1046.39 )
texture = ExtResource( 22 )

[node name="LifePogress" type="TextureProgress" parent="Canvas/UI/LifeSprite"]
margin_left = 86.0818
margin_top = -13.27
margin_right = 361.082
margin_bottom = 26.73
max_value = 50.0
value = 20.0
texture_progress = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="GameOverPanel" type="Sprite" parent="Canvas/UI"]
visible = false
position = Vector2( 596.955, 504.901 )
texture = ExtResource( 25 )

[node name="GoScoreText" type="Label" parent="Canvas/UI/GameOverPanel"]
margin_left = 44.9705
margin_top = -31.6479
margin_right = 244.971
margin_bottom = 31.3521
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.886275, 0.886275, 0.886275, 1 )
text = "0000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="TextureButton" parent="Canvas/UI/GameOverPanel"]
margin_left = -343.673
margin_top = 83.8574
margin_right = -25.673
margin_bottom = 134.857
shortcut_in_tooltip = false
action_mode = 0
button_mask = 0
texture_normal = ExtResource( 27 )
texture_focused = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoExitButton" type="TextureButton" parent="Canvas/UI/GameOverPanel"]
margin_left = 97.9771
margin_top = 83.8574
margin_right = 375.977
margin_bottom = 134.857
shortcut_in_tooltip = false
action_mode = 0
button_mask = 0
texture_normal = ExtResource( 29 )
texture_focused = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausePanel" type="Sprite" parent="Canvas/UI"]
visible = false
position = Vector2( 596.955, 504.901 )
texture = ExtResource( 30 )

[node name="ResumeButton" type="TextureButton" parent="Canvas/UI/PausePanel"]
margin_left = -352.673
margin_top = 237.196
margin_right = 9.327
margin_bottom = 288.196
shortcut_in_tooltip = false
action_mode = 0
button_mask = 0
texture_normal = ExtResource( 31 )
texture_focused = ExtResource( 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PEButton" type="TextureButton" parent="Canvas/UI/PausePanel"]
margin_left = 71.9771
margin_top = 237.196
margin_right = 349.977
margin_bottom = 288.196
shortcut_in_tooltip = false
action_mode = 0
button_mask = 0
texture_normal = ExtResource( 29 )
texture_focused = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreSprite" type="Sprite" parent="Canvas/UI"]
position = Vector2( 103.742, 31.7228 )
texture = ExtResource( 33 )

[node name="ScoreText" type="Label" parent="Canvas/UI/ScoreSprite"]
margin_left = 121.494
margin_top = -32.1756
margin_right = 321.495
margin_bottom = 30.8244
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.807843, 0.807843, 0.807843, 1 )
text = "0000"
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ColorBackground" type="Sprite" parent="Canvas"]
position = Vector2( 600, 540 )
z_index = 1
texture = ExtResource( 21 )

[node name="Spawner" type="Node2D" parent="."]
position = Vector2( 600, 540 )
script = ExtResource( 12 )
spawnPoints = [ null, null, null, null, null, null, null, null, null, null, null, null, null, null ]
enemies = [ ExtResource( 8 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 5 ) ]
specials = [ ExtResource( 17 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 17 ) ]

[node name="0" type="Position2D" parent="Spawner"]
position = Vector2( -600.306, -730.099 )

[node name="1" type="Position2D" parent="Spawner"]
position = Vector2( -205.683, -730.099 )

[node name="2" type="Position2D" parent="Spawner"]
position = Vector2( 208.074, -730.099 )

[node name="3" type="Position2D" parent="Spawner"]
position = Vector2( 607.481, -730.099 )

[node name="4" type="Position2D" parent="Spawner"]
position = Vector2( 782.544, -373.384 )

[node name="5" type="Position2D" parent="Spawner"]
position = Vector2( 782.544, -14.3619 )

[node name="6" type="Position2D" parent="Spawner"]
position = Vector2( 782.544, 343.521 )

[node name="7" type="Position2D" parent="Spawner"]
position = Vector2( 784.107, 751.397 )

[node name="8" type="Position2D" parent="Spawner"]
position = Vector2( 261.376, 751.397 )

[node name="9" type="Position2D" parent="Spawner"]
position = Vector2( -145.994, 751.397 )

[node name="10" type="Position2D" parent="Spawner"]
position = Vector2( -596.624, 751.397 )

[node name="11" type="Position2D" parent="Spawner"]
position = Vector2( -811.333, 361.316 )

[node name="12" type="Position2D" parent="Spawner"]
position = Vector2( -811.333, -17.2137 )

[node name="13" type="Position2D" parent="Spawner"]
position = Vector2( -811.333, -377.718 )

[node name="PlanetParallax" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 0.2, 0.2 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="PlanetParallax"]
motion_mirroring = Vector2( 3600, 1465 )

[node name="Background" type="Sprite" parent="PlanetParallax/ParallaxLayer"]
position = Vector2( 0, 2.20526 )
texture = ExtResource( 19 )
centered = false

[node name="Background2" type="Sprite" parent="PlanetParallax/ParallaxLayer"]
position = Vector2( 1200, 0 )
texture = ExtResource( 18 )
centered = false

[node name="Background3" type="Sprite" parent="PlanetParallax/ParallaxLayer"]
position = Vector2( 2400, 0 )
texture = ExtResource( 1 )
centered = false

[node name="StarsParallax" type="ParallaxBackground" parent="."]
scroll_base_scale = Vector2( 0.05, 0.05 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="StarsParallax"]
motion_mirroring = Vector2( 1200, 1080 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="StarsParallax/ParallaxLayer"]
position = Vector2( 600, 540 )
amount = 100
lifetime = 2.0
preprocess = 70.0
texture = ExtResource( 20 )
emission_shape = 2
emission_rect_extents = Vector2( 600, 540 )
gravity = Vector2( 0, 0 )
angular_velocity = 100.0
angular_velocity_random = 1.0
angle_random = 1.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 34 )
autoplay = true
mix_target = 2

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 35 )
mix_target = 2
[connection signal="button_down" from="Canvas/UI/GameOverPanel/RetryButton" to="." method="_on_RetryButton_button_down"]
[connection signal="button_down" from="Canvas/UI/GameOverPanel/GoExitButton" to="." method="_on_GoExitButton_button_down"]
[connection signal="button_down" from="Canvas/UI/PausePanel/ResumeButton" to="." method="_on_ResumeButton_button_down"]
[connection signal="button_down" from="Canvas/UI/PausePanel/PEButton" to="." method="_on_PEButton_button_down"]
